2005-12-12  Al Riddoch  <alriddoch@zepler.org>

	* varconf/variable.h, varconf/variable.cpp,
	  varconf/dyntypes.h, varconf/dyntypes.cpp,
	  varconf/Config.h, varconf/config.cpp: Add scope to settings to
	  make it easier to manage user and commandline settings
	  separatly from each other.

	* tests/conftest.cpp: Add testing for the scoping mods.

	* varconf/config.h: New header which just include Config.h.
	  Config.h will be deprecaed soon.

2005-04-30  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Include a bug report address, set cross-compile host
	  correctly and clean up.

2005-04-23  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.6.3. Interface version 4.0.0, or 5.0.0 with sigc++ 2.0.

2005-04-23  Al Riddoch  <alriddoch@zepler.org>

	* AUTHORS: Update AUTHORS file to reflect the current maintainers.

	* NEWS: Add new item for 0.6.3 release.

	* varconf.spec.in: Remove BuildRequires as it doesn't have any real
	  requirements. Some cleanups.

2005-04-23  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac, varconf-1.0.pc.in, varconf.spec.in: Remove
	  VARCONF_PACKAGE and VARCONF_VERSION and use the standard
	  PACAKGE and VERSION variables. Switch to bz2 compression for
	  the rpm source package.

2005-04-22  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Clean up and modernise autoconf usage. Remove
	  maintainer mode. Increment version in interface numbers ready
	  for 0.6.3 release.

	* varconf.spec.in: Remove requirements for sigc++ packages, as the
	  package names vary and break the requirements in a really annoying
	  way.

2005-01-10  Simon Goodall  <simon@simongoodall.co.uk>

	* varconf/config.cpp, varconf/Config.h: Make findItem, findSection and 
	  find const.

2004-12-31  Al Riddoch  <alriddoch@zepler.org>

	* varconf.spec.in: Update spec with License URL Package Vendor
	  and Distribution tags.

2004-11-13  Al Riddoch  <alriddoch@zepler.org>

	* tests/conftest.cpp: Fix a couple of places to work with sigc++2.