@@ -1,3 +1,8 @@
+2006-01-03  Al Riddoch  <alriddoch@zepler.org>
+
+	* varconf/Config.h: Make the default scope of setItem be INSTANCE,
+	  for API compatibility.
+
 2005-12-12  Al Riddoch  <alriddoch@zepler.org>
 
 	* varconf/variable.h, varconf/variable.cpp,
